update files and folders

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta name="keywords" content="HTML, CSS, XML, JavaScript">
   <meta name="author" content="Melinda Jeszenka">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
-  <title>About me</title>
+  <title>About me Page</title>
 </head>
 <body>
-    <h1>This is an <strong>"About me"</strong> Page</h1>
+    <div class="container">
+        <h4>Melinda Jeszenka</h4>
+        <p>I design web pages and web stores. My occupation is not just a job for me but my hobby as well. I pour my heart and soul into designing websites.</p>
+        <img src="assets/profile.jpg" alt="Melinda Jeszenka"/>
+    </div>
 </body>
 </html>
-</DOCTYPE>
